<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".character.view.NewCharacterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:elevation="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Novo Personagem"
            app:titleTextColor="@color/white"/>

        <EditText
            app:layout_constraintVertical_chainStyle="packed"
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/red"
            android:hint="@string/nome_do_heroi"
            android:padding="10dp"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/url"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tb_navigation"
            android:autofillHints="name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            android:background="@color/red"
            android:hint="@string/url_do_heroi"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/descricao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nome"
            android:inputType="textUri" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descricao"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/red"
            android:padding="10dp"
            android:hint="@string/descricao_do_heroi"
            android:gravity="top"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/spinnerHeroiVilao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/url"
            android:inputType="textLongMessage" />

        <Spinner
            android:id="@+id/spinnerHeroiVilao"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:shadowColor="@color/white"
            android:background="@color/blue"
            app:layout_constraintBottom_toTopOf="@id/ll_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descricao" />

        <LinearLayout
            android:id="@+id/ll_data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="22dp"
            android:gravity="top"
            app:layout_constraintBottom_toTopOf="@id/btn_salvar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerHeroiVilao">

            <EditText
                android:id="@+id/idade"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="top"

                android:background="@color/red"
                android:hint="@string/idade_do_heroi"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/aniversario"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerHeroiVilao"
                android:inputType="number" />

            <EditText
                android:id="@+id/aniversario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="top"
                android:background="@color/red"
                android:hint="@string/aniversario_do_heroi"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/idade"
                app:layout_constraintTop_toBottomOf="@id/spinnerHeroiVilao"
                android:inputType="date" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue"
            android:layout_marginBottom="28dp"
            android:text="@string/salvar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>